feat: add cancellation and question assessment
